--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@tailwindcss/line-clamp": "^0.4.4",
         "@types/node": "^22.13.5",
+        "autoprefixer": "^10.4.21",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-react": "^7.37.3",
         "eslint-plugin-react-hooks": "^5.1.0",
+        "postcss": "^8.5.6",
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
+        "tailwindcss": "^4.1.14",
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
@@ -27,6 +31,11 @@
         "@dnd-kit/modifiers": "^9.0.0",
         "@dnd-kit/sortable": "^10.0.0",
         "@dnd-kit/utilities": "^3.2.2",
+        "@fortawesome/fontawesome-svg-core": "^7.1.0",
+        "@fortawesome/free-brands-svg-icons": "^7.1.0",
+        "@fortawesome/free-regular-svg-icons": "^7.1.0",
+        "@fortawesome/free-solid-svg-icons": "^7.1.0",
+        "@fortawesome/react-fontawesome": "^3.1.0",
         "@headlessui/react": "^2.2.0",
         "@inertiajs/react": "^2.0.0",
         "@radix-ui/react-avatar": "^1.1.10",
@@ -67,7 +76,6 @@
         "remixicon": "^4.6.0",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.0.1",
-        "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.2",
         "vaul": "^1.1.2",
